# flyte-mlops

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
mlops/example/: regression_example.py
mlops/model/: inference.py  promotion.py  register.py  validation.py
mlops/test_data/: diamond.parquet
mlops/utils/: constants.py  settings.py
mlops/workflows/: config.py  constants.py
mlops/workflows/model/: inference.py  process.py  reader.py  reference_task_info.md  wf.py
tests/: test_minio.py  test_mlflow.py
